-----------
v4.2.18-git
-----------

[mjr] Fix displaying tag search results (Bug #14412).
[jan] Fix sender of event change notification messages.


-------
v4.2.17
-------

[jan] Update Portuguese translation.
[jan] Update Basque translation.
[mjr] Fix issue where it is possible to save an event with an empty start or
      end date on some browsers.
[mjr] Require Horde_Perms::DELETE for including a calendar as sync-able.
[mjr] Fix end date when toggling an all day event off (Bug #13979).
[jan] Fix showing error message if loading of remote calendars failed.


-------
v4.2.16
-------

[mjr] Fix updating list of resource calendars in resource group dialog (Bug
      #14281).
[jan] Fixed several issues with resource management.
[jan] Update Greek translation (Limperis Antonis <limperis@cti.gr>).


-------
v4.2.15
-------

[mjr] Fix typo preventing deletion of events from dynamic view (Bug #14256).
[jan] Handle gracefully if the base event of an imported recurrence exception
      is no longer recurring (Bug #14249).


-------
v4.2.14
-------

[mjr] Fix issue deleting and closing event dialog during event deletion.
[mjr] Honor the SCHEDULE-AGENT attribute during CalDAV import.


-------
v4.2.13
-------

[mjr] Add missing EAS ghosted property support for all EAS versions. Prevents
      potential loss of event data during synchronization.


-------
v4.2.12
-------

[mjr] Fix missing truncated event description when using ActiveSync.
[jan] Fix week number in basic view if week starts on Sundays.
[mjr] Fix issue where new event could be created with exceptions from
      previously edited event.
[jan] Mark preferences only available in basic mode.
[jan] Use access rules compatible with both Apache 2.2 and 2.4.
[jan] Fix accidental deletion of events if importing recurring events without a
      UID attribute (Bug #14208).
[mjr] Honor confirm_delete preference in dynamic view (Bug #14188).
[mjr] Correctly deal with cancelled meetings via ActiveSync.