@@ -2,6 +2,7 @@
 v4.2.18-git
 -----------
 
+[jan] Fix losing shared users when adding invalid user name (Bug #14415).
 [mjr] Fix displaying tag search results (Bug #14412).
 [jan] Fix sender of event change notification messages.
 
